styling correct so black not showing all pages top

--- a/src/Assets/Styles/About.css
+++ b/src/Assets/Styles/About.css
@@ -1,7 +1,7 @@
 .aboutContainer{
+    margin-top:20vh;
     color: black;
-    margin-left: 5vh;
-    margin-right: 5vh;
+    margin-right: auto;
 }
 
 .skillsDiv{
