--- a/src/Assets/Styles/Work.css
+++ b/src/Assets/Styles/Work.css
@@ -76,6 +76,11 @@ width:400px;
 
 }
 
+.workContainer{
+  margin-top:20vh;
+  margin-left:20p
+}
+
 
 
 /* .cardText {
